# professorship-openings

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: jobs-scraper.py  pagination-generator.py  search-data.py  url-scraper.py
