[tool.poetry]
name = "job-scraper"
version = "0.1.0"
description = ""
authors = ["zacharyplotkin <zacharyaplotkin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

